@@ -32,6 +32,9 @@ dh-make-perl (0.73-1) UNRELEASED; urgency=low
   * Use CPAN::Meta for processing META.* files, adding support for META.json.
   * When no META file is available, try parsing name and version from Build.PL
     before Makefile.PL. Closes: #589946
+  * fix calls to extract_basic_copyright from File::Find::find to not chdir,
+    fixing lookups for ./LICENSE, etc on refresh. Closes: #613606 -- Fails to
+    correctly identify GPLv2 in RT::Authen::ExternalAuth v0.08 on refresh
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 25 May 2011 16:04:40 +0200
 
